17407
The scala docs for ClassTag state "If the type T contains unresolved references to type parameters or abstract types, a static error results."

However the following behavior does not correspond to the description. Is this a behavior or adocumentation bug?

**Reproduce code**
```scala
scala> def foo5[T] = implicitly[ClassTag[Container[T]]]
```

**Expected result**
```scala
<console>:14: error: No TypeTag available for Container[T]
       def foo5[T] = implicitly[TypeTag[Container[T]]]
                               ^
```

**Actual result**
```scala
foo5: [T]=> scala.reflect.ClassTag[Container[T]]
```
